[project]
name = "movie-expert-agent"
version = "0.1.0"
description = "Movie Expert Agent using OpenAI and real movie API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.98.0",
    "python-dotenv>=1.2.2",
    "requests>=2.28.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
